# hillelFastApi

./: Makefile  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: app_factory.py  main.py  settings.py
documentation/: mkdocs.yml
documentation/docs/: examples.md  index.md
nginx/: nginx.conf
